--- a/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.html
+++ b/src/app/shared/layout/modals/register-modal/parts/login-data/login-data.component.html
@@ -121,7 +121,10 @@
                     <input [type]="mostrarSenha ? 'text' : 'password'" id="password" class="form-control inverted-out"
                         [ngClass]="applyCssInputError('senha')" formControlName="senha" placeholder=" "
                         (beforeinput)="onBeforeInput($event, 'password')"
-                        (input)="isStrengthPassword ? checkPassword() : null" (blur)="showTooltip()">
+                        (input)="isStrengthPassword ? checkPassword() : null"
+                        (focus)="showTooltip()"
+                        (focusout)="showTooltip()"
+                        >
                     <label for="password">{{'geral.senha' | translate}}</label>
                     <i class="fa showPassword" [ngClass]="mostrarSenha ? 'fa-eye-slash' : 'fa-eye'"
                         (click)="mostrarSenha = !mostrarSenha"></i>
@@ -130,8 +133,9 @@
                 <app-error-msg [control]="form.get('senha')" label="{{'geral.senha' | translate}}"
                     class="text-left"></app-error-msg>
 
-                <ul class="requirements-password" *ngIf="isStrengthPassword && !tooltipPassword">
+                <ul class="requirements-password" *ngIf="isStrengthPassword && tooltipPassword">
                     <div id="container-tooltip">
+                        <p>{{'geral.passwordRequirements' | translate}}</p>
                         <li
                             [ngClass]="{'fulfilled': requirements.minimumCharacters, 'unfulfilled': !requirements.minimumCharacters}">
                             <i
@@ -163,12 +167,10 @@
                         </span>
 
                         <div style="width: 100%;">
-                            <div *ngIf="returnRequirementsValue() == 0 "> Nivel da senha: </div>
-                            <div *ngIf="returnRequirementsValue() == 1 "> Nivel da senha: <span id="weak">Fraca</span>
-                            </div>
-                            <div *ngIf="returnRequirementsValue() == 2 || returnRequirementsValue() == 3"> Nivel da
-                                senha: <span id="medium">Media</span></div>
-                            <div *ngIf="returnRequirementsValue() > 3 "> Nivel da senha: <span id="strong">Forte</span>
+                            <div *ngIf="returnRequirementsValue() == 0 "> {{"geral.passwordLevel" | translate}} </div>
+                            <div *ngIf="returnRequirementsValue() == 1 ">{{"geral.passwordLevel" | translate}} <span id="weak">{{"geral.weak" | translate}}</span></div>
+                            <div *ngIf="returnRequirementsValue() == 2 || returnRequirementsValue() == 3"> {{"geral.passwordLevel" | translate}} <span id="medium">{{"geral.medium" | translate}}</span></div>
+                            <div *ngIf="returnRequirementsValue() > 3 ">{{"geral.passwordLevel" | translate}} <span id="strong">{{"geral.strong" | translate}}</span>
                             </div>
                         </div>
 
