--- a/src/app/shared/layout/modals/register-modal/parts/navigation-bar/navigation-bar.component.scss
+++ b/src/app/shared/layout/modals/register-modal/parts/navigation-bar/navigation-bar.component.scss
@@ -13,7 +13,7 @@ button {
     height: 40px;
     border-radius: 4px;
     border: 1px solid var(--highlight);
-    background: #181818;
+    background: rgba(var(--background),0.7);
     color: var(--highlight);
     outline: none;;
 }
@@ -21,18 +21,18 @@ button {
 .active-button {
     border-radius: 4px;
     border: 1px solid var(--highlight);
-    background: #181818;
+    background: var(--background);
     color: var(--highlight);
 }
 .deactive-button {
-    background: var(--header);
-    color: rgba(255, 255, 255, 0.70);
+    background: var(--background);
+    color: rgba(var(--foreground),0.70);
     border: none;
 }
 
 button:disabled {
-    background: var(--header);
-    color: rgba(255, 255, 255, 0.70);
+    background: var(--background);
+    color: rgba(var(--foreground),0.70);
     border: none;
     cursor: not-allowed;
 }
