--- a/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
+++ b/src/app/shared/layout/modals/register-modal/register-modal-component/register-modal-component.component.scss
@@ -1,10 +1,27 @@
+.modal-500 .modal-dialog {
+    width: 400px !important;
+}
+
+.modal-cadastro-cliente .modal-dialog {
+    width: 400px !important;
+}
+
+.modal-content {
+    width: 400px !important;
+}
+
 .container{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     padding: 0 16px;
-    background-color: var(--header);
+    background-color: var(--background);
     min-height: 100vh;
+    
+}
+
+.my-custom-svg {
+    fill: var(--foreground);
 }
 
 .container-header {
@@ -34,9 +51,9 @@
 
 .btn-close-register{
     box-sizing: content-box;
-    color: #000;
+    background-color: var(--background);
     border: 0;
-    border-radius: 0.375rem;
+    border-radius: 4px;
     opacity: 0.5;
 }
 
