--- a/src/app/clientes/deposito/pix/deposito-pix.component.html
+++ b/src/app/clientes/deposito/pix/deposito-pix.component.html
@@ -63,6 +63,7 @@
                             <app-error-msg [control]="form.get('valor')"></app-error-msg>
                             <div class="min-amount">
                                 {{'deposito.valorMinimo' | translate}} {{ valorMinDeposito | currency }}
+                                / {{'deposito.maximumDepositAmount' | translate}} {{ maximumDepositAmount | currency }}
                             </div>
                             <div class="shortcut-amounts">
                                 <button
